Cleaning up code with newer language features